# BunnymodXT

./: .gitignore  .gitmodules  BunnymodXT.sln  CMakeLists.txt  Cargo.toml  LICENSE  README.md  dot.spr
.github/workflows/: main.yml
BunnymodXT/: BunnymodXT.vcxproj  BunnymodXT.vcxproj.filters  TEA.cpp  TEA.hpp  bunnymodxt.cpp  bunnymodxt.hpp  cmd_wrapper.hpp  common.cpp  common.hpp  custom_triggers.cpp  custom_triggers.hpp  cvars.cpp  cvars.hpp  discord_integration.cpp  discord_integration.hpp  dllmain.cpp  draw_hulls.cpp  draw_hulls.hpp  git_revision.cpp.in  git_revision.hpp  helper_functions.cpp  helper_functions.hpp  hud_custom.cpp  hud_custom.hpp  input_editor.cpp  input_editor.hpp  interprocess.cpp  interprocess.hpp  modules.cpp  modules.hpp  opengl_utils.cpp  opengl_utils.hpp  patterns.hpp  rs.hpp  runtime_data.cpp  runtime_data.hpp  shared.hpp  simulation_ipc.cpp  simulation_ipc.hpp  splits.cpp  (+10 more)
BunnymodXT/Linux/: interprocess.cpp  main_linux.cpp
BunnymodXT/Windows/: conutils.cpp  conutils.hpp  dllmain.cpp  interprocess.cpp
BunnymodXT/modules/: ClientDLL.cpp  ClientDLL.hpp  HwDLL.cpp  HwDLL.hpp  PMSharedHooks_linux.cpp  SDL.cpp  SDL.hpp  ServerDLL.cpp  ServerDLL.hpp
BunnymodXT/wrappers/: engine.cpp  engine.hpp  triangle_wrappers.cpp  triangle_wrappers.hpp
BunnymodXT/wrappers/engine-to-client/: cl.cpp  cl.hpp  cls.cpp  cls.hpp  demoapi.cpp  demoapi.hpp  efxapi.cpp  efxapi.hpp  eventapi.cpp  eventapi.hpp  main.cpp  main.hpp  refdef.cpp  refdef.hpp  refparams.cpp  refparams.hpp  studioapi.cpp  studioapi.hpp  triapi.cpp  triapi.hpp
BunnymodXT/wrappers/engine-to-server/: delta.cpp  delta.hpp  globalvars.cpp  globalvars.hpp  main.cpp  main.hpp  movevars.cpp  movevars.hpp  sv.cpp  sv.hpp  svc.cpp  svc.hpp  svs.cpp  svs.hpp
HLSDK/cl_dll/: hud.h  wrect.h
HLSDK/common/: bspfile.h  cl_entity.h  com_model.h  const.h  crc.h  cvardef.h  demo_api.h  engine_launcher_api.h  entity_state.h  event_args.h  pmtrace.h  r_studioint.h  ref_params.h  triangleapi.h  usercmd.h  weaponinfo.h
HLSDK/dlls/: cbase.h  cdll_dll.h  extdll.h  monsters.h  schedule.h  util.h  vector.h
HLSDK/engine/: cdll_int.h  client.h  cmd.h  custom.h  delta.h  edict.h  eiface.h  parsefunc.h  progdefs.h  progs.h  render.h  server_static.h  states.h  studio.h  usermsg.h
HLSDK/pm_shared/: pm_defs.h  pm_info.h  pm_movevars.h
HLSDK/public/: keydefs.h
build-aux/flatpak/: rs.bxt.BunnymodXT.json
bxt-rs/: CMakeLists.txt  Cargo.toml  gen-bindings.sh
bxt-rs/cmake/: CMakeCargo.cmake
bxt-rs/src/: cvar.rs  globals.rs  lib.rs  server.rs  triangle_api.rs  triangle_drawing.rs
bxt-rs/src/ffi/: cvar.rs  hlstrafe.rs  mod.rs  triangle_api.rs
bxt-rs/src/tas_editor/: mod.rs  simulator.rs
bxt-rs/src/utils/: marker.rs  mod.rs  racy_ref_cell.rs
tests/tas/: README.md  example-windows-launcher.bat  run-tests.py  taslogger-to-gt.py
tests/tas/100aa_am/: gt  settings.txt
tests/tas/100aa_am_linux/: gt  notes.txt  script.hltas  settings.txt
